outputs of scm with and without covariates

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+# Large Datasets
+data/acs_data
+
 # Distribution / packaging
 .Python
 build/
@@ -153,6 +156,8 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+.DS_Store
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
